[gd_scene load_steps=4 format=3 uid="uid://d3nhaxyvpc28a"]

[ext_resource type="Script" path="res://Level/Step2/EncapsulationParts/TCP/tcp_entity.gd" id="1_00jfa"]
[ext_resource type="Texture2D" uid="uid://cu2sktpyyv81o" path="res://box.webp" id="2_ebsky"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0q5b"]
size = Vector2(69.7628, 20)

[node name="TCP_entity" type="Node2D"]
script = ExtResource("1_00jfa")

[node name="tcp_entity_collision" type="Area2D" parent="."]
scale = Vector2(1.04906, 0.749162)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tcp_entity_collision"]
shape = SubResource("RectangleShape2D_s0q5b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.140146, -0.0288032)
texture = ExtResource("2_ebsky")

[node name="Label" type="Label" parent="."]
offset_left = -4.0
offset_top = -3.0
offset_right = 36.0
offset_bottom = 23.0
scale = Vector2(0.274296, 0.258345)
text = "TCP"

[connection signal="area_shape_entered" from="tcp_entity_collision" to="." method="_on_tcp_entity_collision_area_shape_entered"]
[connection signal="body_entered" from="tcp_entity_collision" to="." method="_on_tcp_entity_collision_body_entered"]
[connection signal="body_exited" from="tcp_entity_collision" to="." method="_on_tcp_entity_collision_body_exited"]
[connection signal="mouse_entered" from="tcp_entity_collision" to="." method="_on_tcp_entity_collision_mouse_entered"]
[connection signal="mouse_exited" from="tcp_entity_collision" to="." method="_on_tcp_entity_collision_mouse_exited"]
